11 chars long username in case of wallet login using ...

--- a/chat_admin/dashboard_app/templates/dashboard_app/login_settings/edit.html
+++ b/chat_admin/dashboard_app/templates/dashboard_app/login_settings/edit.html
@@ -37,7 +37,7 @@
 						<div class="card-body dashboard-tabs p-0">
 							<ul class="nav nav-tabs px-4" role="tablist">
 								<li class="nav-item">
-									<a class="nav-link active" id="login-option-create-tab" data-toggle="tab" href="#login-option-create" role="tab" aria-controls="login-option-create" aria-selected="true">Create New</a>
+									<a class="nav-link active" id="login-option-create-tab" data-toggle="tab" href="#login-option-create" role="tab" aria-controls="login-option-create" aria-selected="true">Update Option</a>
 								</li>
 							</ul>
 
@@ -52,7 +52,7 @@
 
 												<div class="form-group">
 													<label class="text-muted"><strong>Option Name:</strong>
-														<input type="text" class="form-option-name form-control" name="name" placeholder="Option Name" autocomplete="off" value="{{ option.name }}" />
+														<input type="text" class="form-option-name form-control" name="name" placeholder="Option Name" autocomplete="off" value="{{ option.name }}" disabled/>
 													</label>
 												</div>
 
