--- a/chat_admin/dashboard_app/templates/dashboard_app/login_settings/index.html
+++ b/chat_admin/dashboard_app/templates/dashboard_app/login_settings/index.html
@@ -52,7 +52,7 @@
 												<thead>
 													<tr>
 														<th>Login option</th>
-														<th>Status</th>
+														<th>Enabled</th>
 														<th>Created</th>
 														<th>Action</th>
 													</tr>
